# ssb

./: .gitignore  Cargo.toml  LICENCE  README.md  ssb.man
src/: args.rs  bookmark.rs  bookmarks.rs  main.rs
test_data/: test_data.json
