[package]
name = "ssb"
description = "Bookmarks for your ssh connections"
authors = ["Keating Reid <keating.reid@pm.me>"]
version = "1.0.0"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
clap = "2.33.3"
nix = "0.21.0"
once_cell = "1.8.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
xdg = "2.2.0"

[profile.release]
opt-level = "z" # Optimize for a small binary
lto = "thin"
