[package]
name = "ssb"
description = "Bookmarks for your ssh connections"
authors = ["Keating Reid <keating.reid@pm.me>"]
version = "1.0.0"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["cargo", "derive"] }
nix = "0.25.0"
once_cell = "1.13.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
xdg = "2.4.1"

[profile.release]
opt-level = "z" # Optimize for a small binary
lto = "thin"
strip = true
